# dataq

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dataq/: __init__.py  cli.py  models.py  profiler.py
tests/: test_cli.py  test_profiler.py
