[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataq"
version = "0.1.0"
description = "Data quality profiling and validation CLI — analyze datasets for anomalies, completeness, and patterns"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Edgar Ortega Ramirez"}]
dependencies = [
    "click>=8.1.7,<9.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "numpy>=1.26.0,<2.2.0",
    "rich>=13.7.0,<16.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "ruff>=0.15",
]

[project.scripts]
dataq = "dataq.cli:main"

[project.urls]
Homepage = "https://github.com/EdgarOrtegaRamirez/dataq"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100